# sshr

./: .codeiumignore  .dumpignore  .gitignore  .tool-versions  CHANGELOG.md  Cargo.toml  LICENSE  README.md  makefile
.github/workflows/: release.yml
Formula/: sshr.rb
docs/: hosts.toml  keyboard_shortcuts.md  project_detail.md
src/: app.rs  app_event.rs  config.rs  error.rs  event.rs  events.rs  main.rs  models.rs  sftp_logic.rs  sftp_ui.rs  ssh_service.rs  ui.rs
src/app/: host.rs  keymap.rs  keymap_ext.rs  mod.rs  state.rs  types.rs
src/sftp/: local.rs  mod.rs  remote.rs  state.rs  transfer.rs  ui.rs
src/sftp_logic/: local.rs  mod.rs  remote.rs  state.rs  transfer.rs  types.rs
src/ui/: footer.rs  help_popup.rs  hosts_list.rs  mod.rs  status_bar.rs
