[package]
name = "sshr"
version = "0.7.0"
edition = "2021"
description = "A TUI for managing and connecting to SSH hosts"

[[bin]]
name = "sshr"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"


[dependencies]
ratatui = "0.26.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
arboard = "3.3.0"
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full", "process"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dirs = "6.0.0"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
toml = "0.8.22"
open = "5.3.2"
fuzzy-matcher = "0.3.7"
